<resources>
    <string name="app_name">Bill Please</string>
    <string name="pax">Number of Pax</string>
    <string name="dc">Discount (%)</string>
    <string name="reset">RESET</string>
    <string name="split">SPLIT</string>
    <string name="pn">PayNow</string>
    <string name="c">Cash</string>
    <string name="ipdisc">Enter Discount</string>
    <string name="gst">GST</string>
    <string name="ngst">No GST</string>
    <string name="svs">SVS</string>
    <string name="nsvs">No SVS</string>
    <string name="paxno">Enter Number of Pax</string>
    <string name="ipamt">Enter Amount</string>
    <string name="amt">Amount</string>

</resources>