<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amt"/>

        <EditText
            android:id="@+id/etAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ipamt"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pax"/>

        <EditText
            android:id="@+id/pax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paxno"
            android:inputType="number"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbsvs"
                android:text="@string/svs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:checked="true"
                android:textOff="@string/nsvs"
                android:textOn="@string/svs"/>

            <ToggleButton
                android:id="@+id/tbgst"
                android:text="@string/gst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:checked="true"
                android:textOff="@string/ngst"
                android:textOn="@string/gst"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dc"/>

        <EditText
            android:id="@+id/etdc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ipdisc"
            android:inputType="number"
            android:text="0"
            android:minHeight="48dp" />


        <RadioGroup
            android:id="@+id/rgpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rbc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />

            <RadioButton
                android:id="@+id/rbpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pn" />

            </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSplit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/split" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/reset"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/fDisplay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>